--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background: linear-gradient(135deg, #ff3d00, #8b0000);
             text-align: center;
             padding: 20px;
         }
@@ -19,7 +19,7 @@
         .editor {
             width: 320px;
             padding: 15px;
-            background: #fff;
+            background: white;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             margin-bottom: 20px;
@@ -31,6 +31,7 @@
             padding: 10px;
             text-align: center;
             position: relative;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
         .top-section {
             display: flex;
@@ -53,10 +54,14 @@
             text-align: center;
         }
         .news-title {
-            font-size: 18px;
+            font-size: 20px;
             font-weight: bold;
-            margin-bottom: 5px;
-            color: black;
+            padding: 10px;
+            background: #ff5722;
+            color: white;
+            border-radius: 8px;
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+            margin-bottom: 10px;
         }
         .email {
             font-size: 14px;
@@ -66,9 +71,10 @@
         .sponsor {
             background: red;
             color: white;
-            padding: 5px;
+            padding: 8px;
             font-size: 14px;
             text-align: center;
+            border-radius: 5px;
         }
         input, textarea {
             width: 100%;
@@ -92,7 +98,7 @@
 </head>
 <body>
 
-    <h2>News Poster Editor</h2>
+    <h2 style="color: white;">News Poster Editor</h2>
 
     <div class="container">
         <div class="editor">
