--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             width: 600px;
             height: 800px;
             position: relative;
-            background: url('IMG_1208.jpeg') no-repeat center;
+            background-image: url("IMG_1208.jpeg") no-repeat center;
             background-size: cover;
             padding: 20px;
             border: 5px solid #d62828;
@@ -55,7 +55,7 @@
         .news-title {
             font-size: 22px;
             font-weight: bold;
-            color: #fff;
+            color: background-image: url("paper.gif");;
             text-align: center;
             padding: 15px;
             background: rgba(0, 0, 0, 0.8);
