--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             text-align: center;
             position: relative;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            background: url('https://img.freepik.com/free-vector/futuristic-background-design_23-2148503793.jpg?t=st=1738520368~exp=1738523968~hmac=30b43d113744a83428abacd0ed112458af88c131e29630bafdb86ee2cc2abb0f&w=2000'); /* Subtle Texture */
+            background-image: url("IMG_1209.jpeg"); /* Subtle Texture */
             background-color: #EFCFA0;
         }
         .top-section {
